[gd_scene load_steps=7 format=2]

[ext_resource path="res://Number/Number.gd" type="Script" id=1]
[ext_resource path="res://shaders/TextShader.tres" type="Material" id=2]
[ext_resource path="res://assets/fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="Number" type="CenterContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Label" type="Label" parent="Area2D"]
material = ExtResource( 2 )
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
shape = SubResource( 4 )
[connection signal="num_changed" from="." to="." method="_on_Number_num_changed"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
